syntax = "proto3";

option csharp_namespace = "AnimeListServer.Protos";

service Customer {

	rpc GetCustomerInfo (CustomerInfoLookup) returns (CustomerModel);
}


message CustomerInfoLookup {
    int32 userId = 1; 
}

message CustomerModel {
	string firstName =1;
	string lastName = 2;
	string emailAddress =3;
}